Writing a simple training loop in pytorch

--- a/test.ipynb
+++ b/test.ipynb
@@ -82,10 +82,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Move to function\n",
+    "\n",
+    "def moveTo(obj, device): \n",
+    "    \"\"\" \n",
+    "    obj: the python object to move to a device, or to move its\n",
+    "    ➥ contents to a device\n",
+    "    device: the compute device to move objects to \n",
+    "    \"\"\"\n",
+    "    if isinstance(obj, list): \n",
+    "        return [moveTo(x, device) for x in obj] \n",
+    "    elif isinstance(obj, tuple): \n",
+    "        return tuple(moveTo(list(obj), device)) \n",
+    "    elif isinstance(obj, set): \n",
+    "        return set(moveTo(list(obj), device)) \n",
+    "    elif isinstance(obj, dict): \n",
+    "        to_ret = dict() \n",
+    "        for key, value in obj.items(): \n",
+    "            to_ret[moveTo(key, device)] = moveTo(value, device) \n",
+    "        return to_ret \n",
+    "    elif hasattr(obj, \"to\"): \n",
+    "        return obj.to(device) \n",
+    "    else: \n",
+    "        return obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_tensors = [torch.tensor(1), torch.tensor(2)] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(1, device='mps:0'), tensor(2, device='mps:0')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(moveTo(some_tensors, device)) "
+   ]
   }
  ],
  "metadata": {
