Feeding more data through data augmentation and experimenting on same deep cnn

--- a/ConvolutionalNNs.ipynb
+++ b/ConvolutionalNNs.ipynb
@@ -2071,6 +2071,302 @@
     "    \"ColorJitter\" : transforms.ColorJitter(brightness=0.9, contrast=0.9)\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to apply to your data? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transform = transforms.Compose([\n",
+    "    transforms.RandomAffine(degrees=5, \n",
+    "                            translate=(0.05, 0.05), \n",
+    "                            scale=(0.98, 1.02)), \n",
+    "                            transforms.ToTensor(), \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_transform = transforms.ToTensor()\n",
+    "\n",
+    "mnist_train_t = torchvision.datasets.MNIST(\"./data\", \n",
+    "                                           train=True, transform=train_transform) \n",
+    "\n",
+    "mnist_test_t = torchvision.datasets.MNIST(\"./data\", \n",
+    "                                          train=False, \n",
+    "                                          transform=test_transform)\n",
+    "\n",
+    "mnist_train_loader_t = DataLoader(mnist_train_t, \n",
+    "                                  shuffle=True,\n",
+    "                                  batch_size=B, \n",
+    "                                  num_workers=5) \n",
+    "\n",
+    "mnist_test_loader_t = DataLoader(mnist_test_t, \n",
+    "                                 batch_size=B,\n",
+    "                                 num_workers=5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d3b00a5c19b48c08441ca849f8bd071",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb0707a15530457f8ecc92c829820402",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b4f66455334043e0a9ca4134a2559039",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/313 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be7d24bb6ae64c0ebf461a2271ad56da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "acc35dbb1c7a4995a6bb0bb1f7997566",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/313 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8adbe99c001a4551a5aad5f038a25124",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "11ed7aab1556465e89bb04e74d65c508",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/313 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cc7af07ec284d0bad3b071f9f9bc463",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b39018212fd64d02b6aed9f632e6dedb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/313 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb56c44d37c54639b7599e4e775415f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64f1b5ad8069445abdd85dd9b0c6833b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/313 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cff2c817d359473686354ee41c06d1dc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8501d67640a4a7d800c3b960fab2bd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/313 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba4160404052463f9037384734aeffd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_cnn_pool = nn.Sequential( \n",
+    "    nn.Conv2d(C, filters, 3, padding=3//2), \n",
+    "    nn.Tanh(), \n",
+    "    nn.Conv2d(filters, filters, 3, padding=3//2), \n",
+    "    nn.Tanh(), \n",
+    "    nn.Conv2d(filters, filters, 3, padding=3//2), \n",
+    "    nn.Tanh(), \n",
+    "    nn.MaxPool2d(2), \n",
+    "    nn.Conv2d(filters, 2*filters, 3, padding=3//2), \n",
+    "    nn.Tanh(), \n",
+    "    nn.Conv2d(2*filters, 2*filters, 3, padding=3//2), \n",
+    "    nn.Tanh(), \n",
+    "    nn.Conv2d(2*filters, 2*filters, 3, padding=3//2), \n",
+    "    nn.Tanh(), \n",
+    "    nn.MaxPool2d(2), \n",
+    "    nn.Flatten(), \n",
+    "    nn.Linear(2*filters*D//(4**2), classes),\n",
+    ")\n",
+    "\n",
+    "cnn_results_with_pool_augmented = idlmam.train_simple_network(model_cnn_pool, \n",
+    "    loss_func, mnist_train_loader_t, test_loader=mnist_test_loader_t, \n",
+    "    score_funcs={'Accuracy': accuracy_score}, device=device, epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_results_with_pool,\n",
+    "label='CNN w/ Max Pooling') \n",
+    "\n",
+    "sns.lineplot(x='epoch', y='test Accuracy',\n",
+    "data=cnn_results_with_pool_augmented,\n",
+    "label='CNN w/ Max Pooling + Augmentation')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a careful choice of augmentation, we helped our model learn faster and converge to a better-quality solution, 96.2% accuracy instead of 95.7%"
+   ]
   }
  ],
  "metadata": {
