Implemented a pad and pack function

--- a/RecurrentNNs.ipynb
+++ b/RecurrentNNs.ipynb
@@ -775,50 +775,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'lang' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/andreas/Projects/DL_Inner_Workings/DL_Inner_Workings/RecurrentNNs.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 21>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/andreas/Projects/DL_Inner_Workings/DL_Inner_Workings/RecurrentNNs.ipynb#X14sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m         lang_names \u001b[39m=\u001b[39m [unicodeToAscii(line)\u001b[39m.\u001b[39mlower() \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m \u001b[39mstr\u001b[39m(myfile\u001b[39m.\u001b[39mread(), encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mstrip()\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/andreas/Projects/DL_Inner_Workings/DL_Inner_Workings/RecurrentNNs.ipynb#X14sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m         namge_language_data[lang] \u001b[39m=\u001b[39m lang_names \n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/andreas/Projects/DL_Inner_Workings/DL_Inner_Workings/RecurrentNNs.ipynb#X14sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mprint\u001b[39m(lang, \u001b[39m\"\u001b[39m\u001b[39m: \u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(lang_names))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lang' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arabic :  2000\n",
+      "Chinese :  268\n",
+      "Czech :  519\n",
+      "Dutch :  297\n",
+      "English :  3668\n",
+      "French :  277\n",
+      "German :  724\n",
+      "Greek :  203\n",
+      "Irish :  232\n",
+      "Italian :  709\n",
+      "Japanese :  991\n",
+      "Korean :  94\n",
+      "Polish :  139\n",
+      "Portuguese :  74\n",
+      "Russian :  9408\n",
+      "Scottish :  100\n",
+      "Spanish :  298\n",
+      "Vietnamese :  73\n"
      ]
     }
    ],
    "source": [
-    "# Ingest the data and map it to the correct format\n",
-    "\n",
     "namge_language_data = {}\n",
     "\n",
-    "import unicodedata                    \n",
+    "#We will use some code to remove UNICODE tokens to make life easy for us processing wise\n",
+    "#e.g., convert something like \"Ślusàrski\" to Slusarski\n",
+    "import unicodedata\n",
     "import string\n",
     "\n",
-    "all_letters = string.ascii_letters + \" .,;'\" \n",
-    "n_letters = len(all_letters) \n",
-    "alphabet = {} \n",
+    "all_letters = string.ascii_letters + \" .,;'\"\n",
+    "n_letters = len(all_letters)\n",
+    "alphabet = {}\n",
     "for i in range(n_letters):\n",
     "    alphabet[all_letters[i]] = i\n",
-    "\n",
-    "def unicodeToAscii(s):                 \n",
-    "    return ''.join( \n",
+    "    \n",
+    "# Turn a Unicode string to plain ASCII, thanks to https://stackoverflow.com/a/518232/2809427\n",
+    "def unicodeToAscii(s):\n",
+    "    return ''.join(\n",
     "        c for c in unicodedata.normalize('NFD', s)\n",
     "        if unicodedata.category(c) != 'Mn'\n",
     "        and c in all_letters\n",
     "    )\n",
     "\n",
-    "for zip_path in z.namelist():          \n",
-    "\n",
-    "    if \"data/names/\" in zip_path and zip_path.endswith(\".txt\"): \n",
-    "        lang = zip_path[len(\"data/names/\"):-len(\".txt\")] \n",
-    "        with z.open(zip_path) as myfile: \n",
+    "#Loop through every language, open the zip file entry, and read all the lines from the text file. \n",
+    "for zip_path in z.namelist():\n",
+    "    if \"data/names/\" in zip_path and zip_path.endswith(\".txt\"):\n",
+    "        lang = zip_path[len(\"data/names/\"):-len(\".txt\")]\n",
+    "        with z.open(zip_path) as myfile:\n",
     "            lang_names = [unicodeToAscii(line).lower() for line in str(myfile.read(), encoding='utf-8').strip().split(\"\\n\")]\n",
-    "            namge_language_data[lang] = lang_names \n",
-    "    print(lang, \": \", len(lang_names)) "
+    "            namge_language_data[lang] = lang_names\n",
+    "        print(lang, \": \", len(lang_names)) #Print out the name of each language too. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LanguageNameDataset(Dataset):\n",
+    "    \n",
+    "    def __init__(self, lang_name_dict, vocabulary):\n",
+    "        self.label_names = [x for x in lang_name_dict.keys()]\n",
+    "        self.data = []\n",
+    "        self.labels = []\n",
+    "        self.vocabulary = vocabulary\n",
+    "        for y, language in enumerate(self.label_names):\n",
+    "            for sample in lang_name_dict[language]:\n",
+    "                self.data.append(sample)\n",
+    "                self.labels.append(y)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "    \n",
+    "    def string2InputVec(self, input_string):\n",
+    "        \"\"\"\n",
+    "        This method will convert any input string into a vector of long values, according to the vocabulary used by this object. \n",
+    "        input_string: the string to convert to a tensor\n",
+    "        \"\"\"\n",
+    "        T = len(input_string) #How many characters long is the string?\n",
+    "        \n",
+    "        #Create a new tensor to store the result in\n",
+    "        name_vec = torch.zeros((T), dtype=torch.long)\n",
+    "        #iterate through the string and place the appropriate values into the tensor\n",
+    "        for pos, character in enumerate(input_string):\n",
+    "            name_vec[pos] = self.vocabulary[character]\n",
+    "            \n",
+    "        return name_vec\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        name = self.data[idx]\n",
+    "        label = self.labels[idx]\n",
+    "        \n",
+    "        #Conver the correct class label into a tensor for PyTorch\n",
+    "        label_vec = torch.tensor([label], dtype=torch.long)\n",
+    "        \n",
+    "        return self.string2InputVec(name), label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = LanguageNameDataset(namge_language_data, alphabet)\n",
+    "\n",
+    "train_data, test_data = torch.utils.data.random_split(dataset, (len(dataset)-300, 300))\n",
+    "train_loader = DataLoader(train_data, batch_size=1, shuffle=True)\n",
+    "test_loader = DataLoader(test_data, batch_size=1, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5]) torch.Size([5, 2])\n",
+      "tensor([[-0.4328,  0.4334],\n",
+      "        [ 0.2896,  1.4295],\n",
+      "        [ 0.2896,  1.4295],\n",
+      "        [-0.4328,  0.4334],\n",
+      "        [ 0.6731,  0.8090]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    input_sequence = torch.tensor([0, 1, 1, 0, 2], dtype=torch.long)\n",
+    "    embd = nn.Embedding(3, 2)\n",
+    "    x_seq = embd(input_sequence)\n",
+    "    print(input_sequence.shape, x_seq.shape)\n",
+    "    print(x_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LastTimeStep(nn.Module):\n",
+    "    \"\"\"\n",
+    "    A class for extracting the hidden activations of the last time step following \n",
+    "    the output of a PyTorch RNN module. \n",
+    "    \"\"\"\n",
+    "    def __init__(self, rnn_layers=1, bidirectional=False):\n",
+    "        super(LastTimeStep, self).__init__()\n",
+    "        self.rnn_layers = rnn_layers\n",
+    "        if bidirectional:\n",
+    "            self.num_driections = 2\n",
+    "        else:\n",
+    "            self.num_driections = 1    \n",
+    "    \n",
+    "    def forward(self, input):\n",
+    "        #Result is either a tupe (out, h_t)\n",
+    "        #or a tuple (out, (h_t, c_t))\n",
+    "        rnn_output = input[0]\n",
+    "        last_step = input[1] #this will be h_t\n",
+    "        if(type(last_step) == tuple):#unless it's a tuple, \n",
+    "            last_step = last_step[0]#then h_t is the first item in the tuple\n",
+    "        batch_size = last_step.shape[1] #per docs, shape is: '(num_layers * num_directions, batch, hidden_size)'\n",
+    "        #reshaping so that everything is separate \n",
+    "        last_step = last_step.view(self.rnn_layers, self.num_driections, batch_size, -1)\n",
+    "        #We want the last layer's results\n",
+    "        last_step = last_step[self.rnn_layers-1] \n",
+    "        #Re order so batch comes first\n",
+    "        last_step = last_step.permute(1, 0, 2)\n",
+    "        #Finally, flatten the last two dimensions into one\n",
+    "        return last_step.reshape(batch_size, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D = 64\n",
+    "vocab_size = len(all_letters)\n",
+    "hidden_nodes = 256\n",
+    "classes = len(dataset.label_names)\n",
+    "\n",
+    "first_rnn = nn.Sequential(\n",
+    "  nn.Embedding(vocab_size, D), #(B, T) -> (B, T, D)\n",
+    "  nn.RNN(D, hidden_nodes, batch_first=True), #(B, T, D) -> ( (B,T,D) , (S, B, D)  )\n",
+    "  #the tanh activation is built into the RNN object, so we don't need to do it here\n",
+    "  LastTimeStep(), #We need to take the RNN output and reduce it to one item, (B, D)\n",
+    "  nn.Linear(hidden_nodes, classes), #(B, D) -> (B, classes)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2713dc49ddf94747b7614d1ad0ff560f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb1fb74729da41fb8e87be0385f82a02",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/19774 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39ba6186db394068b0b6aaba176a228a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/300 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88a8a5a20ddd44c6bbb283221c5cc0ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/19774 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfcb3d7f8356499fbb28bd4fdd644d56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/300 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89004c47cf8e429ca7442f5aaf2a8e2d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/19774 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "loss_func = nn.CrossEntropyLoss() \n",
+    "batch_one_train = idlmam.train_simple_network(first_rnn, \n",
+    "                                              loss_func, \n",
+    "                                              train_loader, test_loader=test_loader, score_funcs={'Accuracy': accuracy_score}, \n",
+    "                                              device=device, epochs=5)\n",
+    "\n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=batch_one_train, label='RNN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad_and_pack(batch):\n",
+    "    #1, 2, & 3: organize the batch input lengths, inputs, and outputs as seperate lists\n",
+    "    input_tensors = []\n",
+    "    labels = []\n",
+    "    lengths = []\n",
+    "    for x, y in batch:\n",
+    "        input_tensors.append(x)\n",
+    "        labels.append(y)\n",
+    "        lengths.append(x.shape[0]) #Assume shape is (T, *)\n",
+    "    #4: create the padded version of the input\n",
+    "    x_padded = torch.nn.utils.rnn.pad_sequence(input_tensors, batch_first=False)\n",
+    "    #5: create the packed version from the padded & lengths\n",
+    "    x_packed = torch.nn.utils.rnn.pack_padded_sequence(x_padded, lengths, batch_first=False, enforce_sorted=False)\n",
+    "    #Convert the lengths into a tensor\n",
+    "    y_batched = torch.as_tensor(labels, dtype=torch.long)\n",
+    "    #6: return a tuple of the packed inputs and their labels\n",
+    "    return x_packed, y_batched"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EmbeddingPackable(nn.Module):\n",
+    "    \"\"\"\n",
+    "    The embedding layer in PyTorch does not support Packed Sequence objects. \n",
+    "    This wrapper class will fix that. If a normal input comes in, it will \n",
+    "    use the regular Embedding layer. Otherwise, it will work on the packed \n",
+    "    sequence to return a new Packed sequence of the appropriate result. \n",
+    "    \"\"\"\n",
+    "    def __init__(self, embd_layer):\n",
+    "        super(EmbeddingPackable, self).__init__()\n",
+    "        self.embd_layer = embd_layer \n",
+    "    \n",
+    "    def forward(self, input):\n",
+    "        if type(input) == torch.nn.utils.rnn.PackedSequence:\n",
+    "            # We need to unpack the input, \n",
+    "            sequences, lengths = torch.nn.utils.rnn.pad_packed_sequence(input.cpu(), batch_first=True)\n",
+    "            #Embed it\n",
+    "            sequences = self.embd_layer(sequences.to(input.data.device))\n",
+    "            #And pack it into a new sequence\n",
+    "            return torch.nn.utils.rnn.pack_padded_sequence(sequences, lengths.cpu(), \n",
+    "                                                           batch_first=True, enforce_sorted=False)\n",
+    "        else:#apply to normal data\n",
+    "            return self.embd_layer(input)"
    ]
   },
   {
